mirroring bot - 2026/03/20